# CUDA

./: CMakeLists.txt  CUDA_IMPLEMENTATION_GUIDE.md  HOMEWORK_README.md  HOW_TO_SWITCH_CPU_GPU.md  NEXT_STEPS.md  QUICK_START.txt  benchmark.sh  build_cpu.sh  build_gpu.sh  meshCD.sln  notes.txt  objCD.vcproj  objCD.vcxproj  objCD.vcxproj.filters  render_obj.py  view_obj.py  visualize_benchmark.py  编译说明.md
benchmark_results/: benchmark_20251105_071743.csv  benchmark_20251105_071743.txt  benchmark_20251105_071752.txt  benchmark_20251105_072051.csv  benchmark_20251105_072051.txt  benchmark_20251224_142027.csv  benchmark_20251224_142027.txt
build_cpu/: CMakeCache.txt  Makefile  cmake_install.cmake
inc/: aabb.h  box.h  forceline.h  helper_cuda.h  mat3f.h  pair.h  quaternion.h  transf.h  tri.h  vec3f.h
learn/: a.out  omp_for  omp_parallel.cpp
src/: cmodel.cpp  crigid.cpp  crigid.h  mesh_distance.cu  obj-viewer.cpp
